--- a/style.css
+++ b/style.css
@@ -44,23 +44,32 @@
 #gif_container {
     position: relative;
     width: 100%;
-    height: 50%;
+    height: 500px;
     overflow: hidden;
 }
 #background_gif {
     width: 100%;
-    height: 500px;
+    height: 100%;
     display: block;
 }
 #button_gif {
     position: absolute;
-    top: 90%; /* Перемещаем кнопку вниз */
-    left: 80%; /* Перемещаем кнопку влево */
+    bottom: 30px; /* Установил отступ снизу */
+    right: 30px; /* Установил отступ справа */
     color: #fff;
     border: none;
     cursor: pointer;
 }
-
+/* Стили для кнопки Заказать услуги */
+.btn_entity {
+    border-radius: 15px;
+    padding: 20px 40px;
+    background-color: rgb(81, 206, 252);
+    color: white;
+    font-family: 'onest',Arial,sans-serif;
+    border: none;
+    font-size: 17px;
+}
 /* Стили для текста */
 #text_gif {
     position: absolute;
@@ -137,5 +146,3 @@
 .reviews_card{
     border-style: solid black;
 }
-
-@media ()
