--- a/style.css
+++ b/style.css
@@ -114,8 +114,14 @@
 /* information */
 #information {
     text-align: center; /* Центрирование текста по горизонтали */
-    font-size: 24px; /* Увеличьте размер шрифта по вашему желанию */
-    padding: 20px; /* Добавьте отступы по вашему желанию */
+    font-size: 30px; /* Увеличьте размер шрифта по вашему желанию */
+    padding: 20px 10px; /* Добавьте отступы по вашему желанию */
+    font-family: 'onest',Arial,sans-serif;
+    letter-spacing: -1.5px;
+    font-weight: 400;
+}
+#information span {
+    color: #24ccfa;
 }
 
 /* photos */
@@ -138,8 +144,13 @@
     text-align: center; /* Центрирование текста по горизонтали */
     font-size: 24px; /* Увеличьте размер шрифта по вашему желанию */
     padding: 20px;
+    font-family: 'onest',Arial,sans-serif;
+    letter-spacing: -1.5px;
+    font-weight: 400;
 }
-
+#name_services span{
+    color: #24ccfa;
+}
 /* service */
 /* reviews */
 #reviews h4{
