--- a/style.css
+++ b/style.css
@@ -144,12 +144,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* padding: 40px 10% 10px 10%; */
     flex-direction: row;
 }
 #footer{
-    background-color: #a9eeff;
+    background-color: #bbf1ffbc;
 }
 #footer_info {
     text-align: center
+}
+#footer_bar #nav li {
+    list-style: none;
+}
+#footer_bar a {
+    text-decoration: none;
 }
