--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    border-radius: 30px;
 }
 #button_gif {
     position: absolute;
@@ -80,6 +81,7 @@
     color: white;
     top: 70%;
     text-align: left;
+    margin-left: 10px;
 }
 #text_gif_Hight {
     
@@ -91,6 +93,79 @@
  /* Перемещаем текст вправо */
     font-size: 24px;
 }
+
+
+/* Navbar container */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial;
+  }
+  
+  /* Links inside the navbar */
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* The dropdown container */
+  .dropdown {
+    float: left;
+    overflow: hidden;
+    
+  }
+  
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+  
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    border-radius: 30px;
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    border-radius: 30px;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+
 
 /* card */
 #card_container {
@@ -109,6 +184,27 @@
 
 .card>.info{
     text-align: center;
+}
+#button_card {
+    bottom: 30px; /* Установил отступ снизу */
+    right: 30px; /* Установил отступ справа */
+    color: #fff;
+    border: none; 
+}
+/* Стили для кнопки Заказать услуги */
+.btn_entity {
+    border-radius: 15px;
+    padding: 20px 40px;
+    background-color: rgb(81, 206, 252);
+    color: white;
+    font-family: 'onest',Arial,sans-serif;
+    border: none;
+    font-size: 17px;
+    transition: background-color 0.3s /* Увеличил время анимации для плавного перехода */
+}
+.btn_entity:hover {
+    background-color: rgba(2, 166, 255, 0.8); /* Изменение цвета при наведении */
+    cursor: pointer; /* Изменение курсора при наведении */
 }
 
 /* information */
