--- a/style.css
+++ b/style.css
@@ -226,22 +226,42 @@
     color: #24ccfa;
 }
 
-/* photos */
-#image_container {
+/* slider */
+.slider_container{
+    position: relative;
+    width: 600px;
+    height: 400px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.slider {
     display: flex;
-    overflow-x: auto;
+    transition: transform 0.5s ease-in-out;
+}
+.slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.prev_btn, .next_btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  color: white;
 }
 
-#image_container img {
-    width: auto; /* Ограничивает максимальную ширину изображения */
-    max-height: 400px; /* Поддерживает пропорции изображения */
-    margin-right: 15px; /* Добавляет немного горизонтального отступа между изображениями */
-    border-radius: 30px;
-}
-.image_slider{
-    overflow-x: auto;
+.prev_btn {
+  left: 10px;
 }
 
+.next_btn {
+  right: 10px;
+}
 /* service name */
 #name_services{
     text-align: center; /* Центрирование текста по горизонтали */
