--- a/style/style.css
+++ b/style/style.css
@@ -16,8 +16,8 @@
     border-radius: 30px;
 }
 .navigation{
-    background-color:#bbf1ffbc;
-    border-radius: 30px;
+    background-color:#ecf9ff;
+    border-radius: 30px 0px 0px 30px;
     box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
     padding: 5px;
 }
@@ -309,16 +309,18 @@
 }
 
 /* footer */
-
+#footer{
+    background-color: #ecf9ff;
+    margin-top: auto;
+    padding: 20px;
+    border-radius: 10px ;
+}
 #footer_nav{
     display: flex;
     align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     flex-direction: row;
-}
-#footer{
-    background-color: #bbf1ffbc;
-    margin-top: auto;
 }
 #footer_info {
     text-align: center
@@ -328,9 +330,19 @@
 }
 #footer_bar #nav li {
     list-style: none;
+    margin: 20px 0px;
+    font-size: 20px;
 }
 #footer_bar a {
     text-decoration: none;
+    color: #000;
+    
+}
+#footer_nav a img {
+    align-self: flex-start;
+}
+#footer_info p {
+    font-size: 40px;
 }
 body {
     margin: 0;
