--- a/style/style.css
+++ b/style/style.css
@@ -76,6 +76,37 @@
     background-color: rgba(2, 166, 255, 0.8); /* Изменение цвета при наведении */
     cursor: pointer; /* Изменение курсора при наведении */
 }
+
+#menuOverlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+#menuContent {
+    background: white;
+    padding: 60px;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 180%;
+}
+#text_Menu_Hight{
+    font-size: 36px;
+}
+#name,
+#phone {
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
 /* Стили для текста */
 #text_gif {
     position: absolute;
@@ -117,7 +148,6 @@
   .dropdown {
     float: left;
     overflow: hidden;
-    
   }
   
   /* Dropdown button */
