--- a/style/style.css
+++ b/style/style.css
@@ -287,7 +287,7 @@
     position: relative;
     width: 90%; /* Ширина слайдера */
     max-width: 1000px; /* Максимальная ширина слайдера */
-    height: calc(50vw); /* Высота равна половине ширины страницы */
+    height: calc(39vw);
     margin: 20px auto; /* Отступы по краям */
     overflow: hidden;
     border-radius: 15px; /* Скругление углов */
@@ -365,15 +365,12 @@
 }
 
 /* footer */
-<<<<<<< HEAD
 #footer{
     background-color: #ecf9ff;
     margin-top: auto;
     padding: 20px;
     border-radius: 10px ;
 }
-=======
->>>>>>> page2
 #footer_nav{
     display: flex;
     align-items: center;
