--- a/style/style.css
+++ b/style/style.css
@@ -287,7 +287,7 @@
     position: relative;
     width: 90%; /* Ширина слайдера */
     max-width: 1000px; /* Максимальная ширина слайдера */
-    height: calc(39vw);
+    height: auto; /*calc(39vw); */
     margin: 20px auto; /* Отступы по краям */
     overflow: hidden;
     border-radius: 15px; /* Скругление углов */
