--- a/style/style.css
+++ b/style/style.css
@@ -348,20 +348,101 @@
 }
 /* service */
 /* reviews */
-#reviews h4{
-    text-align: center;
+
+.reviews_header {
+    text-align: center; /* Выравнивание текста по центру */
     font-size: 20px;
+    font-family: 'onest',Arial,sans-serif;
+}
+.reviews_header span {
+    color: #24ccfa;
 }
 
-.reviews_card{
-    border-style: solid black;
+/* Стили для обертки отзывов */
+.reviews_wrapper {
+    display: flex; /* Отображение в виде flex-контейнера */
+    justify-content: space-between; /* Распределение элементов по ширине контейнера */
+    max-width: 600px; /* Максимальная ширина блока отзывов */
+    max-height: 600px;
+    margin: 0 auto; /* Центрирование обертки отзывов на странице */
+    margin-bottom: 40px;
+    padding: 30px; /* Поля вокруг обертки отзывов */
+    border: 1px solid #ccc; /* Граница для обертки отзывов */
+    border-radius: 20px;
 }
-.info {
-    text-align: center; /* Центрирование текста по горизонтали */
-    font-size: 18px; /* Увеличьте размер шрифта по вашему желанию */
-    padding: 20px;
-    font-family: 'onest',Arial,sans-serif;
-    font-weight:normal;
+
+/* Стили для списка отзывов */
+.reviews_list {
+    width: 50%; /* Ширина списка отзывов */
+    border-right: 1px solid #9a9a9a;
+}
+
+/* Стили для отдельного отзыва */
+.review {
+    margin-bottom: 20px; /* Внешний отступ между отзывами */
+    font-size: 19px;
+}
+
+/* Дополнительные стили для формы отзыва */
+#review_form {
+    width: 40%; /* Ширина формы отправки отзыва */
+}
+.rating{
+    display: inline-flex;
+    flex-direction: row-reverse;
+}
+.rating_item{
+    font-size: 30px;
+    color: #dcdcdc;
+    cursor: pointer;
+    transition: .2s;
+}
+.rating_item:hover,
+.rating_item:hover ~ .rating_item {
+    color: #989898
+}
+.rating[data-total-value="1"] .rating_item:nth-child(n + 5),
+.rating[data-total-value="2"] .rating_item:nth-child(n + 4),
+.rating[data-total-value="3"] .rating_item:nth-child(n + 3),
+.rating[data-total-value="4"] .rating_item:nth-child(n + 2),
+.rating[data-total-value="5"] .rating_item:nth-child(n + 1) {
+    color: orange;
+}
+/* Дополнительные стили для полей формы */
+#username, #review_comment {
+    padding: 0 20px;
+    margin-bottom: 10px;
+    background: #e9eff6;
+    border-radius: 20px;
+    font-family: 'Roboto', sans-serif;
+    line-height: 30px;
+    border-width: 1px;
+}
+#review_comment{
+    width: 80%;
+    height: 150px;
+}
+#username {
+    width: 80%; 
+}
+
+/* Дополнительные стили для кнопки отправки отзыва */
+#review_form button {
+    width: 100%;
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin: 15px 0;
+    font-size: 19px;
+}
+#review_form h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    color: #707981;
 }
 
 /* footer */
