--- a/style/style.css
+++ b/style/style.css
@@ -45,8 +45,8 @@
 #gif_container {
     position: relative;
     width: 100%;
-    height: 500px;
-    overflow: hidden;
+    height: 800px;
+    padding: 20px;
 }
 #background_gif {
     width: 100%;
@@ -54,15 +54,9 @@
     display: block;
     border-radius: 30px;
 }
-/*
-#button_gif {
-    position: absolute;
-    bottom: 30px; 
-    right: 30px; 
-    color: #fff;
-    border: none; 
+#background_gif, #gif_container {
+    box-sizing: border-box;
 }
-*/
 .button_gif {
     position: absolute;
     bottom: 30px; 
