--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,8 @@
-#page{
-    max-width: 100%;
-    height: auto;
+* {
+    margin: 0;
+    padding: 0;
 }
+
 /*header*/
 #header{
     display: flex;
@@ -39,6 +40,53 @@
     color: #000000;
     font-family: 'onest',Arial,sans-serif;
 }
+/* The dropdown container */
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+/* Dropdown button */
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: black;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+    font-family: 'onest',Arial,sans-serif;
+}
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    border-radius: 30px;
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
+    padding: 5px;
+/*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+    z-index: 1;
+}
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+    border-radius: 30px;
+}
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 
 /* main */
 /* gif container */
@@ -136,13 +184,9 @@
     margin-left: 10px;
 }
 #text_gif_Hight {
-    
-     /* Перемещаем кнопку вниз */
-     /* Перемещаем текст вправо */
     font-size: 60px;
 }
 #text_gif_Low {
- /* Перемещаем текст вправо */
     font-size: 24px;
 }
 
@@ -152,73 +196,18 @@
     overflow: hidden;
     background-color: #333;
     font-family: Arial;
-  }
-  
-  /* Links inside the navbar */
-  .navbar a {
+}
+
+/* Links inside the navbar */
+.navbar a {
     float: left;
     font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
   
-  /* The dropdown container */
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: black;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-    font-family: 'onest',Arial,sans-serif;
-  }
-  
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    border-radius: 30px;
-    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
-    padding: 5px;
-    /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Add a grey background color to dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    border-radius: 30px;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-
-
 /* card */
 #card_container {
     display: grid;
@@ -264,16 +253,17 @@
 }
 
 /* information */
-#information {
-    text-align: center; /* Центрирование текста по горизонтали */
-    font-size: 30px; /* Увеличьте размер шрифта по вашему желанию */
-    padding: 20px 10px; /* Добавьте отступы по вашему желанию */
-    font-family: 'onest',Arial,sans-serif;
+#information { 
+    font-size: 30px; 
+    padding-top: 100px; 
+    padding-bottom: 40px;
+    margin: 0 40px;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: -1.5px;
-    font-weight: 400;
+    font-weight: 500;
 }
 #information span {
-    color: #24ccfa;
+    color: #24affa;
 }
 
 /* slider */
@@ -331,16 +321,16 @@
 /* service name */
 #name_services{
     text-align: center; /* Центрирование текста по горизонтали */
-    font-size: 24px; /* Увеличьте размер шрифта по вашему желанию */
+    font-size: 27px; /* Увеличьте размер шрифта по вашему желанию */
     padding: 20px;
-    font-family: 'onest',Arial,sans-serif;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: -1.5px;
-    font-weight:normal;
+    font-weight:500;
 }
 #name_services span{
-    color: #24ccfa;
+    color: #24affa;
 }
-/* service */
+
 /* reviews */
 #reviews h4{
     text-align: center;
@@ -394,10 +384,4 @@
 #footer_info p {
     font-size: 40px;
 }
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
+
