--- a/style/style.css
+++ b/style/style.css
@@ -232,6 +232,9 @@
 .card>.info{
     text-align: center;
 }
+.card .info p{
+    padding-bottom: 15px;
+}
 #button_card {
     bottom: 30px; /* Установил отступ снизу */
     right: 30px; /* Установил отступ справа */
@@ -241,12 +244,12 @@
 /* Стили для кнопки Заказать услуги */
 .btn_entity {
     border-radius: 15px;
-    padding: 15px 30px;
+    padding: 20px 30px;
     background-color: rgb(81, 206, 252);
     color: white;
     font-family: 'onest',Arial,sans-serif;
     border: none;
-    font-size: 16px;
+    font-size: 17px;
     transition: background-color 0.3s /* Увеличил время анимации для плавного перехода */
 }
 .btn_entity:hover {
