--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,6 @@
     align-items: center;
     margin: 5px;
     padding: 0;
-    
 }
 .nav li{
     list-style-type: none;
@@ -99,21 +98,12 @@
 #background_gif {
     width: 100%;
     height: 100%;
-    display: block;
     border-radius: 30px;
 }
 #background_gif, #gif_container {
     box-sizing: border-box;
 }
 /* Стили для текста */
-
-#overlay_gif{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    top: 60%;
-    position: absolute;
-}
 #text_gif_Hight {
     font-size: 60px;
 }
@@ -121,26 +111,19 @@
     font-size: 24px;
 }
 .text_gif {
+    position: absolute;
     margin-left: 10%;
+    margin-right: 10%;
     text-align: left;
-    padding-right: 10%;
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    top: 70%;
 }
 .button_gif{
-    position: relative;
-    background-color: rgb(81, 206, 252);
-    color: white;
-    padding: 20px 40px;
-    display: inline-block;
-    font-family: 'Roboto', sans-serif;
-    border: none;
-    cursor: pointer;
-    border-radius: 15px;
-    font-size: 17px;
-    transition: background-color 0.3s;
-    margin-left: auto;
+    position: absolute;
+    top: 80%;
+    right: 10%;
 }
 
 /* Стили для кнопки Заказать услуги */
