--- a/style/style.css
+++ b/style/style.css
@@ -174,9 +174,13 @@
 #name,
 #phone {
     width: 100%;
-    height: 40px;
+    max-width: 400px;
+    height: 50px;
     box-sizing: border-box;
     margin-bottom: 10px;
+    border-radius: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
 }
 
 /* Navbar container */
