--- a/style/style.css
+++ b/style/style.css
@@ -425,7 +425,7 @@
 }
 
 /* footer */
-#footer{
+/* #footer{
     background-color: #ecf9ff;
     margin-top: auto;
     padding: 20px;
@@ -459,6 +459,67 @@
 }
 #footer_info p {
     font-size: 40px;
+} */
+
+#footer {
+    background-color: #ecf9ff;
+    padding: 40px;
+    border-radius: 10px;
+}
+ 
+#footer_nav {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+ 
+#footer_info {
+    text-align: center;
+}
+ 
+#footer_info p {
+    font-size: 20px; /* Измените размер шрифта в соответствии с вашим дизайном */
+    margin: 10px 0;
+}
+ 
+#footer_bar ul {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    
+    gap: 20px; /* Расстояние между элементами списка */
+}
+ 
+#footer_bar li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 16px;
+}
+
+ 
+/* Адаптивность */
+@media (max-width: 768px) {
+    #footer_nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+ 
+    #footer_info p {
+        font-size: 16px;
+    }
+ 
+    #footer_bar ul {
+        justify-content: flex-start;
+    }
+}
+ 
+@media (max-width: 480px) {
+    #footer_info .btn_entity {
+        width: 100%; /* Кнопки на всю ширину */
+        margin-bottom: 10px; /* Отступ снизу */
+    }
 }
 
 @media (max-width: 900px) {
