--- a/style/style_page_2.css
+++ b/style/style_page_2.css
@@ -137,6 +137,43 @@
     cursor: pointer;
 }
 
+#menuOverlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease-in-out; /* Плавная анимация изменения прозрачности */
+    opacity: 0;
+    z-index: 999;
+}
+
+#menuContent {
+    background: white;
+    padding: 60px;
+    border-radius: 30px;
+    text-align: center;
+    line-height: 180%;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* Плавные анимации изменения положения и прозрачности */
+    transform: scale(0.8);
+    opacity: 0;
+    z-index: 1000;
+}
+#text_Menu_Hight{
+    font-size: 36px;
+}
+#name,
+#phone{
+    width: 100%;
+    height: 40px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
 @media (max-width: 900px){
     .price_list{
     margin: 0;
