убрал лишний код и стили

--- a/style/style_page_2.css
+++ b/style/style_page_2.css
@@ -46,8 +46,7 @@
     background-color: #b0e0e6; /* Цвет фона при наведении */
 }
 
-
-/*  */
+/* result container */
 .results_container {
     text-align: center;
     margin: 20px;
