доработки по мелочи

--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,7 @@
     font-family: 'Roboto', sans-serif;
     color: #000000;
     text-decoration: none;
+    margin-right: 10px;
 }
 
 .toggle-button .icon-bar {
@@ -612,5 +613,22 @@
     }
     .drop_navigation.active{
         display: flex;
+    }
+    #gif_container{
+        height: 400px;
+    }
+    .text_gif {
+        top: 30%;
+    }
+    
+    .button_gif {
+        top:75%;
+        left: 15%;
+    }
+    #text_gif_Hight {
+        font-size: 40px;
+    }
+    #text_gif_Low {
+        font-size: 18px;
     }
 }
